# arch-engine

./: .gitignore  LICENSE  README.md
agent/: .env.example  .gitignore  instructions.txt  pyproject.toml
agent/app/: main.py  server.py  settings.py
agent/app/agent/: graph.py  graph_builder.py  router.py  task_flow.py
agent/app/config/: mcp_servers.py  prompt.py
agent/app/services/: mcp_initializer.py
agent/app/tools/: mcp_tools.py  reminder.py  weather.py
agent/app/types/: agent_types.py
client/: .env  middleware.ts  package-lock.json  package.json  tsconfig.json
client/app/: layout.tsx  page.tsx
client/app/console/: page.tsx
client/app/login/: page.tsx
client/app/tasks/: page.tsx
client/components/: app-shell.tsx  app-sidebar-console.tsx  app-sidebar.tsx  sidebar-switcher.tsx  task-card.tsx
client/hooks/useLangGraphAgent/: actions.ts  types.ts
client/stores/: chat-store.tsx
console/: .env  middleware.ts  package-lock.json  package.json  tsconfig.json
console/app/: layout.tsx  page.tsx
console/app/(console)/: layout.tsx
console/app/agents/: page.tsx
console/components/: app-breadcrumb.tsx  app-details-header.tsx  app-sidebar.tsx  app-skill-selector.tsx  app-skill-table.tsx  breadcrumb-provider.tsx  page-layout.tsx
console/lib/: auth.ts  backendFetch.ts
console/services/: agent-service.ts  login-service.ts  service-steps-service.ts  services-service.ts  skill-service.ts
console/stores/: chat-store.tsx
mcp-servers/booking-mcp/: README.md  package.json
mcp-servers/calendar-mcp/: README.md  calendar-mcp-server.py  pyproject.toml
(+74 files in other folders)
